; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/pxa/extr_e740_wm9705.c_e740_mic_amp_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/pxa/extr_e740_wm9705.c_e740_mic_amp_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dapm_widget = type { i32 }
%struct.snd_kcontrol = type { i32 }

@SND_SOC_DAPM_PRE_PMU = common dso_local global i32 0, align 4
@E740_AUDIO_IN = common dso_local global i32 0, align 4
@e740_audio_power = common dso_local global i32 0, align 4
@SND_SOC_DAPM_POST_PMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dapm_widget*, %struct.snd_kcontrol*, i32)* @e740_mic_amp_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @e740_mic_amp_event(%struct.snd_soc_dapm_widget* %0, %struct.snd_kcontrol* %1, i32 %2) #0 {
  %4 = alloca %struct.snd_soc_dapm_widget*, align 8
  %5 = alloca %struct.snd_kcontrol*, align 8
  %6 = alloca i32, align 4
  store %struct.snd_soc_dapm_widget* %0, %struct.snd_soc_dapm_widget** %4, align 8
  store %struct.snd_kcontrol* %1, %struct.snd_kcontrol** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @SND_SOC_DAPM_PRE_PMU, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32, i32* @E740_AUDIO_IN, align 4
  %13 = load i32, i32* @e740_audio_power, align 4
  %14 = or i32 %13, %12
  store i32 %14, i32* @e740_audio_power, align 4
  br label %26

15:                                               ; preds = %3
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @SND_SOC_DAPM_POST_PMD, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %15
  %21 = load i32, i32* @E740_AUDIO_IN, align 4
  %22 = xor i32 %21, -1
  %23 = load i32, i32* @e740_audio_power, align 4
  %24 = and i32 %23, %22
  store i32 %24, i32* @e740_audio_power, align 4
  br label %25

25:                                               ; preds = %20, %15
  br label %26

26:                                               ; preds = %25, %11
  %27 = load i32, i32* @e740_audio_power, align 4
  %28 = call i32 @e740_sync_audio_power(i32 %27)
  ret i32 0
}

declare dso_local i32 @e740_sync_audio_power(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
